added Diana's comments from her email to bottom of ch4

--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -218,5 +218,17 @@ Questions to provide guidance on:
 •	To my knowledge, SMUs under the FSPs has not been defined beyond what you’ve indicated, “ a group of one or more WSP CUs of the same species that are managed together.” Since most fisheries are in mixed stock areas this means that most SMUs include a wide range of CUs that co-migrate and for which there is there is also a wide range of available data. I would expect that as fisheries become more precautionary and targeted in future that SMUs might contain fewer CUs.  For example, the Skeena sockeye SMU currently has 33 CUs but in future, it could be sub-divided into run timing and enhanced/wild components. 
 •	Even in the current list though there are some SMUs that are grouped by age class (Fraser chinook), run timing (Fraser sockeye) and odd-even life cycle (Fraser pink, ECVI/Mnld pink). Also, I suspect that as COSEWIC identifies DUs for sockeye, pink and chum that are more closely linked to CUs that our definition of SMUs might change in future. 
 •	As for developing LRPs for SMUs that contain some data limited CUs, I wonder if the indicator stock approach that we use in chinook and coho assessment and management might also work here. Regardless of how SMUs are defined and constructed there will always be limitations to the data that can be collected with available resources. I think that an LRP approach that recognizes and accommodates this variability in data will be very useful and should be considered. Formalizing this type of approach could also help in prioritizing data collection for work planning purposes.
-•	Finally, as far as data limited SMUs are concerned, there will be some SMUs with only qualitative indications of abundance or status as indicated in the annual Outlook document. These SMUs should probably not be prescribed in regulation unless additional data are collected, but should be managed in a very precautionary manner, e.g. longer term fishery closures. 
+•	Finally, as far as data limited SMUs are concerned, there will be some SMUs with only qualitative indications of abundance or status as indicated in the annual Outlook document. These SMUs should probably not be prescribed in regulation unless additional data are collected, but should be managed in a very precautionary manner, e.g. longer term fishery closures.
+
+Diana's email 26 Oc
+•	At a first cut, we attempted to align SMUs to MUs that are already defined in place for implementation of the management and assessment frameworks implemented for the PST.  (We do not want to create multiple scales of organization that are not well aligned for any purpose – is inefficient and confusing (e.g. where CUs and DUs are not aligned).)  
+•	While some get caught up in the CU, SMU scale issues, it would be unfair to say SMUs have no biological basis.  Even within freshwater basins, for the most part they are geographic clusters of CUs.  (Fraser exceptions).   They are ‘managed together’ as Ron describes below BECAUSE they co-migrate.  Of course, from an ecosystem-based management point of view, ‘management’ is bigger than harvest impacts, but i) co-migration patterns would presumably result in similar marine risks/pressures and ii) SMU-scale aggregation within freshwater basins is also related to some extent to old ‘production areas’ where f/w risks/pressures may be fairly similar across CUs within the SMU at least at a high level.
+•	I agree with Ron that aggregation issues related to how to define LRPs or assess SMU status is complicated by data and there needs to be some flexibility with these evaluations.   I suppose that is a subject of the work you are up to.  i.e. How well do CU statuses correlate within an SMU?
+•	I would also add that it seems to me that you cannot consider the LRP outside the management strategy, except this is obviously complicated since the LRP is supposed to be strictly science determined.  But consider SMUs where variable CU status is accommodated in the harvest control rules through measures such as time-area closures.  In other words, the SMU has multiple removal rates.   It would be more useful for Science to evaluate whether or not the harvest control rules were likely to be effective for the lower status CUs rather than presume a single control rule ...  in fact, this is how we work with FM often…
+
+CH response
+-On your last point, I agree we do need to identify a HCR that meets objectives (conservation, harvest, and socioeconomic etc.), where one of those objectives is having a low probability of dropping below an LRP (or equivalently, CU-level benchmarks). Yes, I agree the SMU can have multiple removal rates in the HCR that are set to achieve objectives. 
+-And the choice of the HCR is species, stock, context-specific. Although our paper does not develop or evaluate those HCRs, that is certainly a next step that we will highlight.
+
 -->
+
