revised ch1 case study paper up until log regress diagnostics

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -19,7 +19,7 @@ While aggregate abundance-based LRPs are consistent with what is typically used 
 
 When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). <!--CH: In the Guidelines paper, I would like to add text that aggregate-abundance based LRPs may not need to be identified explicitly for harvest management, if HCRs are identified and evaluated to have a low probability of CUs breaching their lower benchmarks. We might want to pull this thread through the Introduction of the case study paper or better yet here in Ch2 here when abundance-based LRPs are mentioned. Something like  "While aggregate-abundance based LRPs can be used as part of, or to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))".  I will include similar, but expanded text in the Guidelines paper, referring to the Groundfish MP Framework) --> 
 
-The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@canadaCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (cite Pestal et all tech report). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark that has been identified as important for individual CUs by local experts. A variety of methods are available for estimating lower benchmarks depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020]. 
+The above definitions hinge on what defines 'poor' CU status. In the case of WSP Integrated Status Assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@canadaCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP Integrated status assessments are typically intensive expert-driven processes, we demonstrate the application of a multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (cite Pestal et all tech report). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on a single lower benchmark <!--CH: "on abundances--> that has been identified as important for individual CUs <!--CH: can we remove "for individual CUs"?--> by local experts. <!--CH: suggest adding to more precisely capture Sue's concerns... "While the multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric, abundances relative to a lower benchmark to demonstrate how in most cases the multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies."--> A variety of methods are available for estimating lower benchmarks <!--CH "on abundances"--> depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020]<!--CH: as described in Holt et al. (in review)". 
  
 <!--
   CW: Reference, is the WSP author DFO or Canada? I have seen it cited in both ways in CSAS papers, and I think I was using the DFO version as it is what Julie Marentette used in her 2021 papers.-- should I change it to the canada citation  (@canadaCanadaPolicyConservation2005) ?
@@ -28,12 +28,12 @@ The above definitions hinge on what defines 'poor' CU status. In the case of WSP
 
 ## PROPORTION-BASED LRPS
 
-A proportion-based LRP is simply the proportion of CUs required to be assessed as being above poor status. In all three case studies, we default to 100% of CUs being required to be above poor status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having poor status. Guidance on how to select the required proportion, including when it may be appropriate to consider proportions < 100%, is provided in the companion working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review). 
+A proportion-based LRP is simply the proportion of CUs required to be assessed as being above poor status. In all three case studies, we default to 100% of CUs being required to be above poor status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having poor status. Guidance on how to select the required proportion, including when it may be appropriate to consider proportions < 100%, is provided in the companion working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review). <!--CH: maybe reword the last sentence to: "Rationale for the choice of 100% of CUs as aligned with LRP is described in Holt et al. (in review) "  Holt et al. (in review) is referenced multiple times in this section; we could include the title of the companion paper at first instance and leave it at Holt et al. (in review) elsewhere?-->
 
-We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent Integrated Status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-babsed benchmarks, etc.). 
+We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent Integrated Status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-based benchmarks, etc.). <!-- CH: "While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between rapid multidimensional status assessments and statuses derived from abundances relative to lower benchmarks."-->
 
 
-### Rapid Multidimensional Status Assessment Tool{#rapidToolMethods}
+### Rapid Multidimensional Status Assessment Tool{#rapidToolMethods}<!--CH: can we keep name consistent, perhaps "Rapid Multidimensional Scanning Tool" -->
 
 <!-- Note from Sue:
 
@@ -43,7 +43,7 @@ CW: I have been using lower benchmark for CUs and LRPs for SMUs -- Not sue if th
 
 -->
 
-One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full Integrated Status Assessments on an more regular basis than time-intensive Integrated Status Assessment methods allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee Integrated Assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
+One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full Integrated Status Assessments on an more regular basis than time-intensive Integrated Status Assessment methods allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee Integrated Assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]<!--CH: ", and was further ground-truthed with data for Fraser River Chum  and Pink Salmon (Pestal et al. in prep OR S. Grant pers. comm.)" I'm not sure how much the Pink and Chum work will be captured in the report?-->. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion.<!--CH comment; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal et al. in prep)"--> 
 
 
 ```{r decision-tree, fig.cap="Decision tree to assess status of Conservation Units based on the Wild Salmon Policy, under development by State of the Salmon Program", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -55,13 +55,14 @@ knitr::include_graphics("figure/decision_tree.png")
   should we include a paragraph here explaining that the proportion methods (ii) multi dimensional and (iii) single metric are on a continuum and that the multi dimensional method defaults to abundance based benchmarks (i.e., Sgen) when it is available? 
 
 Following Carrie's suggestion from the call on Friday, we may want to say that we are applying the single metric approach to illustrate the dynamics of the multi-dimensional scanner tool: i.e. both approaches will converge when a CU is data rich, and number of spawners are above the 1500 threshold. However the approaches will diverge as the information available for a CU deteriorates or its absolute abundance approaches threshold levels.   
-
+ 
+ CH: I've made a brief reference to this idea above in the text, but think we can leave the details to the actual case studies.
 -->
 
 
 ## AGGREGATE ABUNDANCE-BASED LRPS
 
-Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs will be above a single selected benchmark. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in the working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review).  For our case studies, we focus on a 50% probability threshold for sensitivity analyses, but show sensitivity to other values.  
+Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs <!-- CH: "(the same % as used for proportion-based LRPs)"-->will be above a single selected benchmark. This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in the working paper *Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units* (Holt et al. in review).  For our case studies, we focus on a 50% probability threshold for sensitivity analyses, but show sensitivity to other values<!--CH: "when these can be estimated"? I couldn't estimate 90 and 99% for WCVI CK-->.  
 
 <!--
   CW- Replace first "sensitivity" with "base case" above: 
